// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Center Component applies custom styles 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "red",
      "justifyContent": "center",
    }
  }
>
  Hello, World!
</View>
`;

exports[`Center Component renders correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  Hello, World!
</View>
`;
